--- a/package.json
+++ b/package.json
@@ -1,9 +1,31 @@
 {
-  "name": "leap-app",
+  "name": "estetica-landing-page",
   "version": "1.0.0",
   "type": "module",
-  "packageManager": "bun",
-  "workspaces": [
-    "frontend"
-  ]
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
+  "dependencies": {
+    "@tailwindcss/vite": "^4.1.3",
+    "lucide-react": "^0.484.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-router-dom": "^7.5.0",
+    "tailwindcss": "^4.1.3"
+  },
+  "devDependencies": {
+    "@tailwindcss/oxide": "^4.1.3",
+    "@types/react": "^19.0.8",
+    "@types/react-dom": "^19.0.3",
+    "@vitejs/plugin-react": "^4.3.4",
+    "lightningcss": "^1.29.2",
+    "tw-animate-css": "^1.2.5",
+    "typescript": "^5.8.3",
+    "vite": "^6.2.5"
+  },
+  "optionalDependencies": {
+    "rollup": "^4.39.0"
+  }
 }
